--- a/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
+++ b/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
@@ -15,7 +15,7 @@
 
 galaxy_docker_published_ports:
 {% if galaxy_docker_web_port is defined and galaxy_docker_web_port !='' %}
-  - "{% if not galaxy_docker_web_port_expose %}127.0.0.1:{% endif %}{{galaxy_docker_web_port}}:80"
+  - "127.0.0.1:{{galaxy_docker_web_port}}:80"
   {% endif %}
   {% if galaxy_docker_ftp_port is defined and galaxy_docker_ftp_port !='' %}
   - "{% if not galaxy_docker_ftp_port_expose %}127.0.0.1:{% endif %}{{galaxy_docker_ftp_port}}:21"
