--- a/roles/galaxy-docker/templates/galaxy.service.j2
+++ b/roles/galaxy-docker/templates/galaxy.service.j2
@@ -15,6 +15,9 @@ Description=galaxy docker container
 Requires=docker.service
 After=docker.service
 
+[Install]
+WantedBy=multi-user.target
+
 [Service]
 Type=forking
 ExecStart=/usr/bin/docker restart {{galaxy_docker_container_name}}
