changed unit file

--- a/roles/galaxy-docker/templates/galaxy.service.j2
+++ b/roles/galaxy-docker/templates/galaxy.service.j2
@@ -19,6 +19,7 @@ After=docker.service
 WantedBy=multi-user.target
 
 [Service]
-Type=oneshot
+Type=forking
 ExecStart=/usr/bin/docker restart {{galaxy_docker_container_name}}
 TimeoutSec=120
+Restart=on-abort
