--- a/roles/galaxy-docker/templates/environment_setup_file.sh.j2
+++ b/roles/galaxy-docker/templates/environment_setup_file.sh.j2
@@ -1,4 +1,14 @@
 #!/bin/bash
+{# Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center #}
+{# Contact us at: sasc@lumc.nl #}
+{# #}
+{# This file is part of galaxy-docker-ansible. #}
+{# A dual licensing mode is applied. #}
+{# The source code within this project is freely available for non-commercial use under the GNU Affero General Public license. #}
+{# For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license. #}
+{# #}
+{# You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>. #}
+
 GALAXY_VIRTUAL_ENV={{galaxy_docker_cluster_virtualenv | default('/galaxy_venv')}}
 GALAXY_ROOT_DIR={{galaxy_docker_export_location}}/galaxy-central
 GALAXY_LIB={{galaxy_docker_export_location}}/galaxy-central/lib
