--- a/roles/galaxy-docker/templates/new_empty_db.j2
+++ b/roles/galaxy-docker/templates/new_empty_db.j2
@@ -1,7 +1,16 @@
+{# Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center #}
+{# Contact us at: sasc@lumc.nl #}
+{# #}
+{# This file is part of galaxy-docker-ansible. #}
+{# A dual licensing mode is applied. #}
+{# The source code within this project is freely available for non-commercial use under the GNU Affero General Public license. #}
+{# For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license. #}
+{# #}
+{# You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>. #}
+
 SELECT pg_terminate_backend(pg_stat_activity.pid)
 FROM pg_stat_activity
 WHERE pg_stat_activity.datname = '{{galaxy_docker_container_database_name}}'
-  AND pid <> pg_backend_pid(); 
+  AND pid <> pg_backend_pid();
 DROP DATABASE {{galaxy_docker_container_database_name}} ;
 CREATE DATABASE {{galaxy_docker_container_database_name}} WITH OWNER {{galaxy_docker_container_database_username}} ;
-
