--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -36,14 +36,14 @@
    <destination id="local" runner="local">
      <env file="/galaxy_venv/bin/activate"/>
    </destination>
-   {% for destination, settings in galaxy_docker_cluster_destinations.iteritems() %}
+   {% for destination, settings in galaxy_docker_cluster_destinations.items() %}
    <destination id="{{destination}}" runner="{{galaxy_docker_cluster_type}}">
      <env file="{{galaxy_docker_cluster_virtualenv | default('/galaxy_venv')}}/bin/activate"/>
      <env id="GALAXY_ROOT_DIR">{{galaxy_docker_export_location}}/galaxy-central</env>
      <env id="GALAXY_LIB">{{galaxy_docker_export_location}}/galaxy-central/lib</env>
      <env id="PYTHONPATH">{{galaxy_docker_export_location}}/galaxy-central/lib</env>
      {%if galaxy_docker_cluster_environment_variables is defined %}
-     {% for env_var, env_setting in galaxy_docker_cluster_environment_variables.iteritems() %}
+     {% for env_var, env_setting in galaxy_docker_cluster_environment_variables.items() %}
      <env id="{{env_var}}">{{env_setting}}</env>
      {% endfor %}
      {% endif %}
